# pytest-import-check

./: README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
pytest_import_check/: __init__.py  importer.py  plugin.py
test/: conftest.py  test_c_ext.py  test_plugin.py
